# nova-wino-amd

./: .gitignore  LICENSE  Makefile  README.md  demo.py  pyproject.toml  setup.py
benchmarks/: bench_batch_scaling.py  bench_densenet.py  bench_densenet_imagenet.py  bench_layers.py  bench_profile_stages.py  bench_sd_unet.py  bench_sdxl.py
csrc/: nova_winograd.hip  nova_winograd_fused.hip  test_fused_mfma.hip
docs/: interview_prep.md  miopen_integration_proposal.md  register_budget_analysis.md  technical_FAQ.md
docs/report/: generate_figures.py  main.tex
examples/: quickstart.py  resnet50_inference.py
experiments/nova_quant/: REPORT.md  __init__.py  cost_function.py  debug_pipeline.py  debug_pipeline2.py  diagnose_group_size.py  es_search.py  perlayer_analysis.py  perplexity_eval.py  rotation.py  run_discovery.py  test_nova_quant.py  triton_rotate.py
experiments/rotated_fp8/: __init__.py  fp8_quantize.py  hadamard.py  load_activations.py  run_experiment.py  test_hadamard.py  triton_kernels.py
nova_winograd/: __init__.py  conv2d.py  ops.py  surgery.py
tests/: test_bp_tiled.hip  test_correctness.py
