[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "nova-winograd"
version = "1.0.0"
description = "NOVA Winograd F(6,3) — Numerically stable large-tile Winograd convolution for AMD GPUs"
requires-python = ">=3.8"
dependencies = ["torch>=2.0"]

[project.optional-dependencies]
bench = ["diffusers", "transformers", "torchvision"]
